--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="element">Gmail</div>
         <div class="element">Images</div>
         <div class="element">
-          <img src="/Users/radorakoto/Documents/THP/GOOGLE/truc noir.png">
+          <img src="truc noir.png">
         </div>
       </div>
     </nav>
@@ -20,7 +20,7 @@
 
   <section class="centre">
     <div class="img">
-      <img src="/Users/radorakoto/Documents/THP/GOOGLE/googlelogo_color_120x44dp.png">
+      <img src="googlelogo_color_120x44dp.png">
     </div>
 
     <div class="input">
